--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -10,7 +10,7 @@
 	</div>
 	
 	<div id="user_list">
-		<h4>Users</h4>
+		<h4>All Users</h4>
 		<ul class="user_list">
 		    <% @users.each do |user| %>
 		        <li><%= user.alias %></li>
@@ -18,3 +18,4 @@
 		</ul>
 	</div>
 </div>
+<ul class="bottom_controls"></ul>
