--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -33,12 +33,11 @@
 
 </div>
 
-<% if @channel.messages.size == 0 %>
-    This channel has no messages.
-<% end %>
-
     <% prev_message = nil %>
 	<ul id="message_list">
+		<% if @channel.messages.size == 0 %>
+		   <li class="message_row"><p class="no_messages">This channel has no messages.</p></li>
+		<% end %>
 	    <% @channel.grouped_messages.each do |group| %>
 	        	<li class="message_row">
 	            <div class="meta">
