--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>  
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
-  <title>Channels</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title><%= controller.action_name %></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!--[if lt IE 9]>
+		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+	<%= stylesheet_link_tag 'reset' %>
+	<%= stylesheet_link_tag 'global' %>
+	<%= javascript_include_tag 'jquery' %>
+	<%= javascript_include_tag 'jquerycolor' %>
+	<%= javascript_include_tag 'jquery.form' %>
+	<%= yield :head %>
 </head>
 <body>
 
