--- a/app/views/layouts/channels.html.erb
+++ b/app/views/layouts/channels.html.erb
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Channels: <%= controller.action_name %></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
@@ -15,7 +16,6 @@
 	<%= yield :head %>
 </head>
 <body>
-
 	<header id="header">
 		<div id="header_left">
 			<h1><%= link_to 'channels', channels_path %></h1>
