--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -1,6 +1,16 @@
-<html>
-    <head>
-    </head>
+<!doctype html>  
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title><%= controller.action_name %></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!--[if lt IE 9]>
+		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+	<%= stylesheet_link_tag 'reset' %>
+	<%= stylesheet_link_tag 'global' %>
+</head>
     <body>
         <p style="color: green"><%= flash[:notice] %></p>
         <p style="color: red"><%= flash[:warning] %></p>
