--- a/app/views/layouts/channels.html.erb
+++ b/app/views/layouts/channels.html.erb
@@ -17,6 +17,9 @@
 	<%= javascript_include_tag 'jquery' %>
 	<%= javascript_include_tag 'jquerycolor' %>
 	<%= javascript_include_tag 'jquery.form' %>
+        <%= javascript_include_tag :defaults %>
+        <%= csrf_meta_tag %>
+
 	<%= yield :head %>
 </head>
 <body>
