--- a/app/views/layouts/channels.html.erb
+++ b/app/views/layouts/channels.html.erb
@@ -17,7 +17,7 @@
 	<%= javascript_include_tag 'jquery' %>
 	<%= javascript_include_tag 'jquerycolor' %>
 	<%= javascript_include_tag 'jquery.form' %>
-        <%= javascript_include_tag :defaults %>
+        <%= javascript_include_tag 'rails' %>
         <%= csrf_meta_tag %>
 
 	<%= yield :head %>
