--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -21,23 +21,29 @@
 	
 	<% prev_message = nil %>
 	<ul id="message_list">
-		<% if @channel.messages.size == 0 %>
-		   <li class="message_row"><p class="no_messages">This channel has no messages.</p></li>
-		<% end %>
+            <% if @channel.messages.size == 0 %>
+                <li class="message_row"><p class="no_messages">This channel has no messages.</p></li>
+            <% end %>
 	    <% @channel.grouped_messages.each do |group| %>
-	        	<li class="message_row">
-	            <div class="meta">
-	            	<p class="username"><%= group.poster %>:</p>
-				<p class="date"><%= group.date %></p>
-	            </div>
-	            <div class="message_content">
-	                    <% group.messages.reverse.each do |m| %>
-	                        <p id="message_<%= m.id %>"><%= raw [m.marked_up_content] %></p>
-	                    <% end %>
-	            </div>
-	            </li>
-	    <% end %>
-	</ul>
+                <li class="message_row">
+                <div class="meta">
+                    <p class="username"><%= group.poster %>:</p>
+                    <p class="date"><%= group.date %></p>
+                </div>
+                <div class="message_content">
+                    <% group.messages.reverse.each do |m| %>
+                        <p id="message_<%= m.id %>">
+                            <% if m.poster == @user.alias %>
+                                <span class="buttons"><%= link_to 'X', [@channel, m],
+                                    :method => :delete, :remote => true %></span>
+                            <% end %>
+                            <%= raw [m.marked_up_content] %>
+                        </p>
+                    <% end %>
+                </div>
+                </li>
+            <% end %>
+        </ul>
 </div>
 <div id="media_content">
 	<p>Right column for media stuff (just an idea for now)</p>
