--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,3 +1,4 @@
+<% if @message %>
 var added;
 
 var msg = $("<%= escape_javascript(render :partial => "channels/message", :object => @message) %>");
@@ -23,3 +24,5 @@ added.hide().fadeIn();
 $('#msginput').val("");
 
 spinOff();
+
+<% end %>
