--- a/app/views/channels/_message.erb
+++ b/app/views/channels/_message.erb
@@ -1,4 +1,9 @@
-<p id="message_<%= message.id %>">
+
+<p id="message_<%= message.id %>" 
+<% if message.poster != @user.alias and (@previously_last_checked.nil? or @previously_last_checked < message.updated_at) %>
+style="border-left:1px solid #347acb;"
+<% end %>
+>
 <% if message.poster == @user.alias %>
     <span class="buttons"><%= link_to 'X', [@channel, message], :confirm => "Are you sure?",
         :method => :delete, :remote => true %></span>
